[project]
name = "csv-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Taeko Harada", email = "t-harada@med.nagoya-cu.ac.jp" }
]
dependencies = [
    "flet>=0.80.5",
    "pandas==2.3.3",
    "openpyxl==3.1.2"
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.mycompany"
product = "csv-project"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
